# server_example

./: .env  Cargo.toml  README.md  accounts.json
.github/workflows/: rust.yml
src/: app.rs  client.rs  main.rs  server.rs
test_results/: accounts.json
